<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rbf_gnss_ins_driver</name>
  <version>1.0.0</version>
  <description>RBF GNSS INS DRIVER</description>
  <maintainer email="batuhan.beytekin@robeff.com">batu</maintainer>
  <maintainer email="support@robeff.com">robeff</maintainer>
  <license>Apache License 2.0</license>

  <depend>ament_cmake </depend>
  <depend>rclcpp </depend>
  <depend>rclcpp_components</depend>

  <depend>std_msgs </depend>
  <depend>sensor_msgs </depend>
  <depend>nav_msgs </depend>
  <depend>geometry_msgs </depend>
  <depend>tf2_ros </depend>
  <depend>tf2_msgs </depend>
  <depend>tf2_geometry_msgs </depend>
  <depend>rosidl_default_generators </depend>
  <depend>mavros_msgs </depend>
  <depend>eigen </depend>
  <depend>diagnostic_updater </depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
